[package]
name = "Todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
tokio = { version = "1.37.0",features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
